# pplops

./: .gitignore  .prettierignore  AGENTS.md  README.md  architecture.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
scripts/: dev.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  app_settings.rs  invoke_list.rs  meeting.rs  member.rs  mod.rs  planning.rs  report.rs  requirement.rs  task.rs  work_item.rs  workload.rs
src-tauri/src/data_access/: cache.rs  member.rs  mod.rs  work_item.rs
src-tauri/src/migration/: m20260101_000001_create_member.rs  m20260327_000002_create_requirement.rs  m20260327_000003_add_requirement_content.rs  m20260327_000004_expand_member_fields.rs  m20260327_000005_create_task.rs  m20260327_000006_create_work_item.rs  m20260329_000007_work_item_priority_int_and_dependency.rs  m20260330_000008_app_setting.rs  mod.rs
src-tauri/src/models/: app_setting.rs  common.rs  member.rs  mod.rs  requirement.rs  task.rs  work_item.rs  work_item_dependency.rs
src-tauri/src/repositories/: app_setting.rs  member.rs  mod.rs  requirement.rs  task.rs  work_item.rs  work_item_dependency.rs
src-tauri/src/services/: meeting.rs  member.rs  mod.rs  planning.rs  report.rs  requirement.rs  task.rs  work_item.rs  workload.rs
src/api/: app.ts  meeting.ts  member.test.ts  member.ts  planning.ts  report.ts  requirement.test.ts  requirement.ts  task.test.ts  (+4 more)
(+89 files in other folders)
